2009-11-30  GatoLoko  <GatoLoko@gmail.com>

 * instalador: arreglado (otra vez), esto no termina de funcionar nunca.
 * auxiliar.py: agregado el docstring a la funcion unidades.
 * auxiliar.py: eliminadas varias lineas comentadas que ya no son necesarias.
 * auxiliar.py: ordenadas las funciones dependiendo de su utilidad.

2009-11-27  GatoLoko  <GatoLoko@gmail.com>

 * protecciones.py: modificada la funcion anti_notice_cb para que pueda ser
   desactivada en la configuracion del script.
 * protecciones.py: modificada la funcion anti_clonerx_cb para que pueda ser
   desactivada en la configuracion del script.
 * protecciones.py: modificada la funcion anti_drone_cb para que pueda ser
   desactivada en la configuracion del script.

2009-11-23  GatoLoko  <GatoLoko@gmail.com>

 * auxiliar.py: sustituido el uso de ConfigParser.ConfigParser por
   ConfigParser.SafeConfigParser, que es mas recomendable (requiere python 2.3
   o superior).
 * auxiliar.py: simplificada la funcion unidades.
 * auxiliar.py: agregada la funcion kbtemporal_cb que fue eliminada durante la
   modularizacion del script.
 * autosend.py: modificados varios mensajes para hacerlos mas genericos y
   correctos.
 * gatoscript.conf: cambiado el disparador para el autoenvio.
 * rss.py: eliminado un antiguo mensaje de depuración.
 * gatoscript.py: modificado el uso de la funcion print para que sea compatible
   con las futuras versiones de python.
 * gatoscript.db: agregados algunos filtros.

2009-10-10  GatoLoko  <GatoLoko@gmail.com>

 * protecciones.py: modificada la funcion anti_colores_cb para que
   pueda ignorar los mensajes que contienen color de forma opcional.
 * gatoscript.conf: renombrada la opcion "colores" a "banea_colores" y
   agregada la opcion "ignora_colores".
 * gatoscript.conf: eliminadas algunas opciones obsoletas.
 * Eliminadas las versiones propias de cada modulo.
 * remotos.py: empezada la revision del codigo para que trabaje como modulo.