@@ -1,3 +1,12 @@
+2009-12-01  GatoLoko  <GatoLoko@gmail.com>
+
+ * auxiliar.py: agregadas las funciones gatodb_cusor_execute() y
+   gatodb_commit() para centralizar el acceso a la base de datos en un solo
+   modulo.
+ * auxiliar.py: cambiadas algunas variables para que sean privadas del modulo.
+ * rss.py: modificado para usar el acceso a la base de datos mediante las
+   funciones del modulo auxiliar.
+
 2009-11-30  GatoLoko  <GatoLoko@gmail.com>
 
  * instalador: arreglado (otra vez), esto no termina de funcionar nunca.
